# voxtral-tts

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml  serve.mjs
.github/workflows/: benchmark-sequential.yml  benchmark.yml  ci.yml  release.yml
benchmarks/: baseline-macos-arm64.json
docs/: add-tts-spec.md  team.md  tts-requirements.md  tts-tasks.md  tts-wasm-feasibility.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_gguf_reader.rs  fuzz_q4_roundtrip.rs  fuzz_sharded_cursor.rs
patches/cubecl-std-0.9.0/src/: fast_math.rs
scripts/: convert_voice_embeds.py  quantize_tts_gguf.py
space-tts/: README.md  index.html  tts-client.js  worker.js
space-tts/pkg/: README.md  package.json  voxtral_mini_realtime.d.ts  voxtral_mini_realtime.js  voxtral_mini_realtime_bg.wasm.d.ts
src/: audio_output.rs  backend.rs  engine.rs  lib.rs  ring_buffer.rs
src/audio/: io.rs
src/gguf/: linear.rs  loader.rs  mod.rs  model.rs  op.rs  reader.rs  tensor.rs  tests.rs  tts_loader.rs  tts_model.rs
src/models/: decoder.rs  weights.rs
src/models/layers/: attention.rs  decoder_layer.rs
src/tokenizer/: encoder.rs  mod.rs
src/tts/: backbone.rs  config.rs  embeddings.rs  flow_matching.rs  mod.rs  pipeline.rs  sequence.rs  voice.rs
src/tts/codec/: alibi.rs  block.rs  conv.rs  layer_scale.rs  mod.rs  qk_norm.rs  quantizer.rs
src/web/: bindings.rs
tests/: bench_q4_tts.rs  bench_tts_wasm.spec.ts  benchmark_tts_rtf.rs  end_audio_investigation.rs  gguf_integration.rs  tts_q4_integration.rs
web/: bench-tts.html  worker.js
