[package]
name = "voxtral-tts"
version = "0.3.0"
edition = "2021"
description = "Voxtral TTS — streaming audio lib crate for Core Dump sidecar"
license = "Apache-2.0"
repository = "https://github.com/GoCodeAlone/voxtral-tts"
authors = ["Jon Langevin"]

[features]
default = ["wgpu", "native-tokenizer"]
wgpu = ["burn/wgpu"]
# Tekken BPE encoding via tiktoken
native-tokenizer = ["tiktoken-rs"]
profiling = ["tracing-chrome"]

[dependencies]
# Burn ML framework
burn = { version = "0.20", default-features = false, features = ["std", "autodiff", "template", "autotune"] }
cubecl = { version = "0.9", default-features = false, features = ["wgpu"] }

# Tekken BPE encoding
tiktoken-rs = { version = "0.9", optional = true }
base64 = "0.22"

# Audio processing
hound = "3.5"
rubato = "1.0"
rustfft = "6.4"
audioadapter-buffers = "2.0"

# Serialization & model loading
safetensors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-chrome = { version = "0.7", optional = true }
pollster = "0.4"
num-traits = "0.2"
num-complex = "0.4"
byteorder = "1.5"
flate2 = "1.1"
half = "2.7"
memmap2 = "0.9"
rustc-hash = "1.1"

# NDArray for test data loading
ndarray = "0.16"
ndarray-npy = "0.9"

[dev-dependencies]
criterion = "0.8"
approx = "0.5"
tempfile = "3.24"
pollster = "0.4.0"

[[bench]]
name = "audio"
harness = false

[[bench]]
name = "q4_ops"
harness = false
required-features = ["wgpu"]

[[bench]]
name = "q4_pipeline"
harness = false
required-features = ["wgpu"]

[lib]
crate-type = ["rlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.profiling]
inherits = "release"
debug = 1

[profile.dist]
inherits = "release"
lto = "thin"

[patch.crates-io]
cubecl-wgpu = { path = "patches/cubecl-wgpu-0.9.0" }
